# automation-tool

./: .env.example  .gitignore  HYBRID DUAL PLAN.md  README.md  accounts.json  browser_down.bat  browser_up.bat  main.py  master_trading_playbook.md  memory.md  output.md  pyproject.toml  reconcile_daemon_plans_xauusd.bat  run_capture_analyze_eurusd.bat  run_capture_analyze_many_eurusd_usdjpy.bat  run_capture_analyze_usdjpy.bat  run_capture_headed.bat  run_daemon.bat  run_daily.bat  run_mt5_login_exness_trial8.bat  run_update.bat  stop_daemon_plan_xauusd.bat  stop_daemon_wait.bat  system-prompt.md  telegram_listen.bat  test.json  trade.md
config/: coinmap.yaml  coinmap_update.yaml
docs/: coinmap-chart-json.md
mql5/: TRADE_COPIER_TEST.md
tests/: test_chart_payload_validate.py  test_cli_daemon_plan_args.py  test_cloudinary_json.py  test_coinmap_bearer_cache.py  test_coinmap_interval_filter.py  test_coinmap_merge.py  test_coinmap_openai_slim.py  test_coinmap_query_placeholders.py  test_daemon_launcher_pid_alive.py  test_first_response_trade.py  test_intraday_update_thread.py  test_journal_monitor_cutoff.py  test_last_alert_state.py  test_last_price_ipc_prices.py  test_main_chart_symbol.py  test_market_merge_single.py  test_mt5_accounts.py  test_mt5_daemon_plan_price.py  test_mt5_execute_tp2.py  test_mt5_manage.py  test_mt5_manage_chinh_tp2.py  test_mt5_multi.py  test_mt5_openai_parse.py  test_mt5_session.py  test_mt5_zone_telegram.py  test_non_blocking_touch_flow.py  test_openai_analysis_json.py  test_openai_prompt_flow_json_upload.py  test_telegram_openai_payload.py  (+13 more)
(+52 files in other folders)
