[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coinmap-automation"
version = "0.1.0"
description = "Coinmap chart capture → OpenAI Responses (prompt id) → Telegram bot"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "playwright>=1.40.0",
    "openai>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0.0",
    "pandas>=2.0.0",
    "tvdatafeed @ git+https://github.com/rongardF/tvdatafeed.git",
]

[project.optional-dependencies]
mt5 = ["MetaTrader5>=5.0.45"]

[project.scripts]
coinmap-automation = "automation_tool.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
